[metadata]
name = qmc_graphene_interlayer
version = 0.0.1
author = Mick Krongchon, Lucas Wagner
author_email = lkwagner@illinois.edu
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qmc-hamm/interlayer_energies_demo
project_urls =
    Bug Tracker = https://github.com/qmc-hamm/interlayer_energies_demo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = qmc_graphene_interlayer
packages = find:
python_requires = >=3.6

[options.packages.find]
where = interlayer_energies
